istioctl/pkg/writer/compare/testdata/diffenvoyconfigdump.json
{
    "configs": [
        {
            "@type": "type.googleapis.com/envoy.admin.v3.BootstrapConfigDump",
            "bootstrap": {
                "node": {
                    "id": "sidecar~172.30.77.243~details-v1-9cb87c69-t2fdz.default~default.svc.cluster.local",
                    "cluster": "details",
                    "metadata": {
                        "POD_NAME": "details-v1-9cb87c69-t2fdz",
                        "INTERCEPTION_MODE": "REDIRECT",
                        "istio": "sidecar"
                    },
                    "buildVersion": "0/1.7.0-dev//RELEASE"
                },
                "staticResources": {
                    "clusters": [
                        {
                            "name": "xds-grpc",
                            "type": "STRICT_DNS",
                            "connectTimeout": "10s",
                            "hosts": [
                                {
                                    "socketAddress": {
                                        "address": "istio-pilot.istio-system",
                                        "portValue": 15010
                                    }
                                }
                            ],
                            "circuitBreakers": {
                                "thresholds": [
                                    {
                                        "maxConnections": 100000,
                                        "maxPendingRequests": 100000,
                                        "maxRequests": 100000
                                    },
                                    {
                                        "priority": "HIGH",
                                        "maxConnections": 100000,
                                        "maxPendingRequests": 100000,
                                        "maxRequests": 100000
                                    }
                                ]
                            },
                            "http2ProtocolOptions": {}
                        },
                        {
                            "name": "zipkin",
                            "type": "STRICT_DNS",
                            "connectTimeout": "1s",
                            "hosts": [
                                {
                                    "socketAddress": {
                                        "address": "zipkin.istio-system",
                                        "portValue": 9411
                                    }
                                }
                            ]
                        }
                    ]
                },
                "dynamicResources": {
                    "ldsConfig": {
                        "ads": {}
                    },
                    "cdsConfig": {
                        "ads": {}
                    },
                    "adsConfig": {
                        "apiType": "GRPC",
                        "refreshDelay": "10s",
                        "grpcServices": [
                            {
                                "envoyGrpc": {
                                    "clusterName": "xds-grpc"
                                }
                            }
                        ]
                    }
                },
                "statsSinks": [
                    {
                        "name": "envoy.statsd",
                        "config": {
                            "address": {
                                "socket_address": {
                                    "address": "172.21.250.115",
                                    "port_value": 9125
                                }
                            }
                        }
                    }
                ],
                "tracing": {
                    "http": {
                        "name": "envoy.zipkin",
                        "config": {
                            "collector_cluster": "zipkin",
                            "collector_endpoint": "/api/v1/spans"
                        }
                    }
                },
                "admin": {
                    "accessLogPath": "/dev/stdout",
                    "address": {
                        "socketAddress": {
                            "address": "127.0.0.1",
                            "portValue": 15000
                        }
                    }
                },
                "statsConfig": {
                    "useAllDefaultTags": false
                }
            }
        },
        {
            "@type": "type.googleapis.com/envoy.admin.v3.ClustersConfigDump",
            "versionInfo": "2018-05-29 20:35:10.051043472 +0000 UTC m=+615.036247510",
            "staticClusters": [
                {
                    "cluster": {
                        "name": "xds-grpc",
                        "type": "STRICT_DNS",
                        "connectTimeout": "10s",
                        "hosts": [
                            {
                                "socketAddress": {
                                    "address": "istio-pilot.istio-system",
                                    "portValue": 15010
                                }
                            }
                        ],
                        "circuitBreakers": {
                            "thresholds": [
                                {
                                    "maxConnections": 100000,
                                    "maxPendingRequests": 100000,
                                    "maxRequests": 100000
                                },
                                {
                                    "priority": "HIGH",
                                    "maxConnections": 100000,
                                    "maxPendingRequests": 100000,
                                    "maxRequests": 100000
                                }
                            ]
                        },
                        "http2ProtocolOptions": {}
                    }
                }
            ],
            "dynamicActiveClusters": [
                {
                    "versionInfo": "2018-05-29 20:34:37.15936519 +0000 UTC m=+582.144569116",
                    "cluster": {
                        "name": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
                        "type": "EDS",
                        "edsClusterConfig": {
                            "edsConfig": {
                                "ads": {}
                            },
                            "serviceName": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
                        },
                        "connectTimeout": "1s",
                        "maxRequestsPerConnection": 10000,
                        "circuitBreakers": {
                            "thresholds": [
                                {}
                            ]
                        },
                        "http2ProtocolOptions": {
                            "maxConcurrentStreams": 1073741824
                        }
                    }
                }
            ]
        },
        {
            "@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
            "versionInfo": "2018-05-29 20:35:10.051043472 +0000 UTC m=+615.036247510",
            "dynamicListeners": [
              {
                "activeState": {
                    "versionInfo": "2018-05-29 20:34:55.438944238 +0000 UTC m=+600.424148258",
                    "listener": {
                        "name": "172.21.134.116_443",
                        "address": {
                            "socketAddress": {
                                "address": "172.21.134.116",
                                "portValue": 443
                            }
                        },
                        "filterChains": [
                            {
                                "filters": [
                                    {
                                        "name": "mixer",
                                        "config": {
                                            "disable_check_calls": true,
                                            "mixer_attributes": {
                                                "attributes": {
                                                    "context.reporter.local": {
                                                        "bool_value": false
                                                    },
                                                    "context.reporter.uid": {
                                                        "string_value": "kubernetes://productpage-v1-5fcc7488f8-54g7q.default"
                                                    },
                                                    "destination.service": {
                                                        "string_value": "unknown"
                                                    },
                                                    "destination.service.host": {
                                                        "string_value": "unknown"
                                                    },
                                                    "destination.service.name": {
                                                        "string_value": "unknown"
                                                    },
                                                    "destination.service.uid": {
                                                        "string_value": "istio:///services/unknown"
                                                    },
                                                    "source.uid": {
                                                        "string_value": "kubernetes://productpage-v1-5fcc7488f8-54g7q.default"
                                                    }
                                                }
                                            },
                                            "transport": {
                                                "attributes_for_mixer_proxy": {
                                                    "attributes": {
                                                        "source.uid": {
                                                            "string_value": "kubernetes://productpage-v1-5fcc7488f8-54g7q.default"
                                                        }
                                                    }
                                                },
                                                "check_cluster": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
                                                "report_cluster": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local"
                                            }
                                        }
                                    },
                                    {
                                        "name": "envoy.tcp_proxy",
                                        "config": {
                                            "deprecated_v1": true,
                                            "value": {
                                                "route_config": {
                                                    "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
                                                    "routes": [
                                                        {
                                                            "cluster": "outbound|443||istio-galley.istio-system.svc.cluster.local",
                                                            "destination_ip_list": [
                                                                "172.21.134.116/32"
                                                            ]
                                                        }
                                                    ]
                                                },
                                                "stat_prefix": "outbound|tcp|443"
                                            }
                                        }
                                    }
                                ]
                            }
                        ],
                        "deprecatedV1": {
                            "bindToPort": false
                        }
                    }
                }
              },
              {
                "activeState" : {
                    "versionInfo": "2018-05-29 20:34:55.438944238 +0000 UTC m=+600.424148258",
                    "listener": {
                        "name": "0.0.0.0_8080",
                        "address": {
                            "socketAddress": {
                                "address": "0.0.0.0",
                                "portValue": 8080
                            }
                        },
                        "filterChains": [
                            {
                                "filters": [
                                    {
                                        "name": "envoy.http_connection_manager",
                                        "config": {
                                            "stat_prefix": "http",
                                            "use_remote_address": false,
                                            "generate_request_id": true,
                                            "access_log": [
                                                {
                                                    "name": "envoy.file_access_log",
                                                    "config": {
                                                        "path": "/dev/stdout"
                                                    }
                                                }
                                            ],
                                            "http_filters": [
                                                {
                                                    "name": "mixer",
                                                    "config": {
                                                        "transport": {
                                                            "report_cluster": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local",
                                                            "check_cluster": "outbound|9091||istio-policy.istio-system.svc.cluster.local"
                                                        },
                                                        "service_configs": {
                                                            "details.default.svc.cluster.local": {
                                                                "disable_report_calls": true,
                                                                "disable_check_calls": true,
                                                                "mixer_attributes": {
                                                                    "attributes": {
                                                                        "destination.service": {
                                                                            "string_value": "details.default.svc.cluster.local"
                                                                        },
                                                                        "destination.labels": {
                                                                            "string_map_value": {
                                                                                "entries": {
                                                                                    "pod-template-hash": "57643725",
                                                                                    "app": "details",
                                                                                    "version": "v1"
                                                                                }
                                                                            }
                                                                        }
                                                                    }
                                                                }
                                                            }
                                                        },
                                                        "default_destination_service": "details.default.svc.cluster.local",
                                                        "forward_attributes": {
                                                            "attributes": {
                                                                "source.ip": {
                                                                    "bytes_value": "AAAAAAAAAAAAAP//rB5N8w=="
                                                                },
                                                                "source.uid": {
                                                                    "string_value": "kubernetes://details-v1-9cb87c69-t2fdz.default"
                                                                },
                                                                "source.labels": {
                                                                    "string_map_value": {
                                                                        "entries": {
                                                                            "pod-template-hash": "57643725",
                                                                            "app": "details",
                                                                            "version": "v1"
                                                                        }
                                                                    }
                                                                }
                                                            }
                                                        },
                                                        "mixer_attributes": {
                                                            "attributes": {}
                                                        }
                                                    }
                                                },
                                                {
                                                    "name": "envoy.cors"
                                                },
                                                {
                                                    "name": "envoy.fault"
                                                }
                                            ],
                                            "route_config": {
                                                "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
                                                "name": "8080",
                                                "validate_clusters": false,
                                                "virtual_hosts": [
                                                    {
                                                        "routes": [
                                                            {
                                                                "match": {
                                                                    "prefix": "/"
                                                                },
                                                                "decorator": {
                                                                    "operation": "default-route"
                                                                },
                                                                "route": {
                                                                    "cluster": "outbound|8080||istio-pilot.istio-system.svc.cluster.local"
                                                                }
                                                            }
                                                        ],
                                                        "domains": [
                                                            "istio-pilot.istio-system.svc.cluster.local",
                                                            "istio-pilot.istio-system.svc.cluster.local:8080",
                                                            "istio-pilot.istio-system",
                                                            "istio-pilot.istio-system:8080",
                                                            "istio-pilot.istio-system.svc.cluster",
                                                            "istio-pilot.istio-system.svc.cluster:8080",
                                                            "istio-pilot.istio-system.svc",
                                                            "istio-pilot.istio-system.svc:8080",
                                                            "172.21.245.9",
                                                            "172.21.245.9:8080"
                                                        ],
                                                        "name": "istio-pilot.istio-system.svc.cluster.local:8080"
                                                    }
                                                ]
                                            },
                                            "tracing": {
                                                "operation_name": "EGRESS"
                                            }
                                        }
                                    }
                                ]
                            }
                        ],
                        "deprecatedV1": {
                            "bindToPort": false
                        }
                    }
                }
              }
            ]
        },
        {
            "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
            "staticRouteConfigs": [
                {
                    "routeConfig": {
                        "name": "inbound|9080||productpage.default.svc.cluster.local",
                        "virtualHosts": [
                            {
                                "name": "inbound|http|9080",
                                "domains": [
                                    "*"
                                ],
                                "routes": [
                                    {
                                        "match": {
                                            "prefix": "/"
                                        },
                                        "route": {
                                            "cluster": "inbound|9080||productpage.default.svc.cluster.local",
                                            "timeout": "0s",
                                            "useWebsocket": true
                                        },
                                        "decorator": {
                                            "operation": "productpage.default.svc.cluster.local:9080/*"
                                        },
                                        "perFilterConfig": {
                                            "mixer": {
                                                "mixer_attributes": {
                                                    "attributes": {
                                                        "destination.service.uid": {
                                                            "string_value": "istio://default/services/productpage"
                                                        },
                                                        "destination.service.host": {
                                                            "string_value": "productpage.default.svc.cluster.local"
                                                        },
                                                        "destination.service.name": {
                                                            "string_value": "productpage"
                                                        },
                                                        "destination.service.namespace": {
                                                            "string_value": "default"
                                                        },
                                                        "destination.service": {
                                                            "string_value": "productpage.default.svc.cluster.local"
                                                        }
                                                    }
                                                }
                                            }
                                        }
                                    }
                                ]
                            }
                        ],
                        "validateClusters": false
                    }
                }
            ],
            "dynamicRouteConfigs": [
                {
                    "versionInfo": "2018-06-19 06:21:16.597131985 +0000 UTC m=+38444.053119011",
                    "lastUpdated": "2018-06-19T06:21:16.597131985+00:00",
                    "routeConfig": {
                        "name": "15004",
                        "virtualHosts": [
                            {
                                "name": "istio-policy.istio-system.svc.cluster.local:15004",
                                "domains": [
                                    "istio-policy.istio-system.svc.cluster.local",
                                    "istio-policy.istio-system.svc.cluster.local:15004",
                                    "istio-policy.istio-system",
                                    "istio-policy.istio-system:15004",
                                    "istio-policy.istio-system.svc.cluster",
                                    "istio-policy.istio-system.svc.cluster:15004",
                                    "172.21.193.112",
                                    "172.21.193.112:15004"
                                ],
                                "routes": [
                                    {
                                        "match": {
                                            "prefix": "/"
                                        },
                                        "route": {
                                            "cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
                                            "timeout": "0s"
                                        },
                                        "decorator": {
                                            "operation": "istio-policy.istio-system.svc.cluster.local:15004/*"
                                        }
                                    }
                                ]
                            },
                            {
                                "name": "istio-telemetry.istio-system.svc.cluster.local:15004",
                                "domains": [
                                    "istio-telemetry.istio-system.svc.cluster.local",
                                    "istio-telemetry.istio-system.svc.cluster.local:15004",
                                    "istio-telemetry.istio-system",
                                    "istio-telemetry.istio-system:15004",
                                    "istio-telemetry.istio-system.svc.cluster",
                                    "istio-telemetry.istio-system.svc.cluster:15004",
                                    "istio-telemetry.istio-system.svc",
                                    "istio-telemetry.istio-system.svc:15004",
                                    "172.21.41.196",
                                    "172.21.41.196:15004"
                                ],
                                "routes": [
                                    {
                                        "match": {
                                            "prefix": "/"
                                        },
                                        "route": {
                                            "cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
                                            "timeout": "0s"
                                        },
                                        "decorator": {
                                            "operation": "istio-telemetry.istio-system.svc.cluster.local:15004/*"
                                        }
                                    }
                                ]
                            }
                        ],
                        "validateClusters": false
                    }
                }
            ]
        }
    ]
}
