istioctl/pkg/writer/compare/testdata/pilotconfigdump2020.json
{
    "configs": [
        {
            "@type": "type.googleapis.com/envoy.admin.v3.BootstrapConfigDump"
        },
        {
            "@type": "type.googleapis.com/envoy.admin.v3.ClustersConfigDump",
            "versionInfo": "2020-03-06T21:51:34Z/47",
            "dynamic_active_clusters": [
                {
                    "cluster": {
                        "@type": "type.googleapis.com/envoy.api.v2.Cluster",
                        "name": "BlackHoleCluster",
                        "type": "STATIC",
                        "connectTimeout": "1s",
                        "filters": [
                            {
                                "name": "envoy.filters.network.upstream.metadata_exchange",
                                "typedConfig": {
                                    "@type": "type.googleapis.com/udpa.type.v1.TypedStruct",
                                    "typeUrl": "type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange",
                                    "value": {
                                            "protocol": "istio-peer-exchange"
                                        }
                                }
                            }
                        ]
                    }
                }
            ]
        },
        {
            "@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
            "versionInfo": "2020-03-06T21:51:34Z/47",
            "dynamicListeners": [
                {
                    "activeState": {
                        "listener": {
                            "@type": "type.googleapis.com/envoy.api.v2.Listener",
                            "name": "172.30.150.195_9080",
                            "address": {
                                "socketAddress": {
                                    "address": "172.30.150.195",
                                    "portValue": 9080
                                }
                            },
                            "filterChains": [
                                {
                                    "filters": [
                                        {
                                            "name": "envoy.filters.network.metadata_exchange",
                                            "config": {
                                                    "protocol": "istio-peer-exchange"
                                                }
                                        },
                                        {
                                            "name": "envoy.http_connection_manager",
                                            "typedConfig": {
                                                "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager",
                                                "statPrefix": "inbound_172.30.150.195_9080",
                                                "routeConfig": {
                                                    "name": "inbound|9080|http|details.default.svc.cluster.local",
                                                    "virtualHosts": [
                                                        {
                                                            "name": "inbound|http|9080",
                                                            "domains": [
                                                                "*"
                                                            ],
                                                            "routes": [
                                                                {
                                                                    "name": "default",
                                                                    "match": {
                                                                        "prefix": "/"
                                                                    },
                                                                    "route": {
                                                                        "cluster": "inbound|9080|http|details.default.svc.cluster.local",
                                                                        "timeout": "0s",
                                                                        "maxGrpcTimeout": "0s"
                                                                    },
                                                                    "decorator": {
                                                                        "operation": "details.default.svc.cluster.local:9080/*"
                                                                    }
                                                                }
                                                            ]
                                                        }
                                                    ],
                                                    "validateClusters": false
                                                },
                                                "httpFilters": [
                                                    {
                                                        "name": "envoy.filters.http.wasm",
                                                        "typedConfig": {
                                                            "@type": "type.googleapis.com/udpa.type.v1.TypedStruct",
                                                            "typeUrl": "type.googleapis.com/envoy.config.filter.http.wasm.v2.Wasm",
                                                            "value": {
                                                                    "config": {
                                                                                "configuration": "envoy.wasm.metadata_exchange",
                                                                                "vm_config": {
                                                                                            "code": {
                                                                                                        "local": {
                                                                                                                    "inline_string": "envoy.wasm.metadata_exchange"
                                                                                                                }
                                                                                                    },
                                                                                            "runtime": "envoy.wasm.runtime.null"
                                                                                        }
                                                                            }
                                                                }
                                                        }
                                                    },
                                                    {
                                                        "name": "istio_authn",
                                                        "typedConfig": {
                                                            "@type": "type.googleapis.com/istio.envoy.config.filter.http.authn.v2alpha1.FilterConfig",
                                                            "policy": {
                                                                "peers": [
                                                                    {
                                                                        "mtls": {

                                                                        }
                                                                    }
                                                                ]
                                                            }
                                                        }
                                                    },
                                                    {
                                                        "name": "envoy.cors"
                                                    },
                                                    {
                                                        "name": "envoy.fault"
                                                    },
                                                    {
                                                        "name": "envoy.filters.http.wasm",
                                                        "typedConfig": {
                                                            "@type": "type.googleapis.com/udpa.type.v1.TypedStruct",
                                                            "typeUrl": "type.googleapis.com/envoy.config.filter.http.wasm.v2.Wasm",
                                                            "value": {
                                                                    "config": {
                                                                                "configuration": "{\n  \"debug\": \"false\",\n  \"stat_prefix\": \"istio\",\n}\n",
                                                                                "root_id": "stats_inbound",
                                                                                "vm_config": {
                                                                                            "code": {
                                                                                                        "local": {
                                                                                                                    "inline_string": "envoy.wasm.stats"
                                                                                                                }
                                                                                                    },
                                                                                            "runtime": "envoy.wasm.runtime.null",
                                                                                            "vm_id": "stats_inbound"
                                                                                        }
                                                                            }
                                                                }
                                                        }
                                                    },
                                                    {
                                                        "name": "envoy.router"
                                                    }
                                                ],
                                                "tracing": {
                                                    "clientSampling": {
                                                        "value": 100
                                                    },
                                                    "randomSampling": {
                                                        "value": 1
                                                    },
                                                    "overallSampling": {
                                                        "value": 100
                                                    }
                                                },
                                                "serverName": "istio-envoy",
                                                "streamIdleTimeout": "0s",
                                                "useRemoteAddress": false,
                                                "generateRequestId": true,
                                                "forwardClientCertDetails": "APPEND_FORWARD",
                                                "setCurrentClientCertDetails": {
                                                    "subject": true,
                                                    "dns": true,
                                                    "uri": true
                                                },
                                                "upgradeConfigs": [
                                                    {
                                                        "upgradeType": "websocket"
                                                    }
                                                ],
                                                "normalizePath": true
                                            }
                                        }
                                    ],
                                    "transportSocket": {
                                        "name": "envoy.transport_sockets.tls",
                                        "typedConfig": {
                                            "@type": "type.googleapis.com/envoy.api.v2.auth.DownstreamTlsContext",
                                            "commonTlsContext": {
                                                "tlsCertificateSdsSecretConfigs": [
                                                    {
                                                        "name": "default",
                                                        "sdsConfig": {
                                                            "apiConfigSource": {
                                                                "apiType": "GRPC",
                                                                "grpcServices": [
                                                                    {
                                                                        "envoyGrpc": {
                                                                            "clusterName": "sds-grpc"
                                                                        }
                                                                    }
                                                                ]
                                                            }
                                                        }
                                                    }
                                                ],
                                                "combinedValidationContext": {
                                                    "defaultValidationContext": {

                                                    },
                                                    "validationContextSdsSecretConfig": {
                                                        "name": "ROOTCA",
                                                        "sdsConfig": {
                                                            "apiConfigSource": {
                                                                "apiType": "GRPC",
                                                                "grpcServices": [
                                                                    {
                                                                        "envoyGrpc": {
                                                                            "clusterName": "sds-grpc"
                                                                        }
                                                                    }
                                                                ]
                                                            }
                                                        }
                                                    }
                                                },
                                                "alpnProtocols": [
                                                    "istio-peer-exchange",
                                                    "h2",
                                                    "http/1.1"
                                                ]
                                            },
                                            "requireClientCertificate": true
                                        }
                                    }
                                }
                            ],
                            "deprecatedV1": {
                                "bindToPort": false
                            },
                            "listenerFilters": [
                                {
                                    "name": "envoy.listener.tls_inspector"
                                }
                            ],
                            "listenerFiltersTimeout": "0.100s",
                            "continueOnListenerFiltersTimeout": true,
                            "trafficDirection": "INBOUND"
                        }
                    }
                }
            ]
        },
        {
            "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
            "dynamicRouteConfigs": [
                {
                    "routeConfig": {
                        "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
                        "name": "kubernetes-dashboard.kube-system.svc.cluster.local:443",
                        "virtualHosts": [
                            {
                                "name": "kubernetes-dashboard.kube-system.svc.cluster.local:443",
                                "domains": [
                                    "kubernetes-dashboard.kube-system.svc.cluster.local",
                                    "kubernetes-dashboard.kube-system.svc.cluster.local:443",
                                    "kubernetes-dashboard.kube-system",
                                    "kubernetes-dashboard.kube-system:443",
                                    "kubernetes-dashboard.kube-system.svc.cluster",
                                    "kubernetes-dashboard.kube-system.svc.cluster:443",
                                    "kubernetes-dashboard.kube-system.svc",
                                    "kubernetes-dashboard.kube-system.svc:443",
                                    "172.21.58.5",
                                    "172.21.58.5:443"
                                ],
                                "routes": [
                                    {
                                        "name": "default",
                                        "match": {
                                            "prefix": "/"
                                        },
                                        "route": {
                                            "cluster": "outbound|443||kubernetes-dashboard.kube-system.svc.cluster.local",
                                            "timeout": "0s",
                                            "retryPolicy": {
                                                "retryOn": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
                                                "numRetries": 2,
                                                "retryHostPredicate": [
                                                    {
                                                        "name": "envoy.retry_host_predicates.previous_hosts"
                                                    }
                                                ],
                                                "hostSelectionRetryMaxAttempts": "5",
                                                "retriableStatusCodes": [
                                                    503
                                                ]
                                            },
                                            "maxGrpcTimeout": "0s"
                                        },
                                        "decorator": {
                                            "operation": "kubernetes-dashboard.kube-system.svc.cluster.local:443/*"
                                        }
                                    }
                                ]
                            }
                        ],
                        "validateClusters": false
                    }
                },
                {
                    "routeConfig": {
                        "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
                        "name": "8080",
                        "virtualHosts": [
                            {
                                "name": "foo.default.svc.cluster.local:8080",
                                "domains": [
                                    "foo.default.svc.cluster.local",
                                    "foo.default.svc.cluster.local:8080",
                                    "foo",
                                    "foo:8080",
                                    "foo.default.svc.cluster",
                                    "foo.default.svc.cluster:8080",
                                    "foo.default.svc",
                                    "foo.default.svc:8080",
                                    "foo.default",
                                    "foo.default:8080",
                                    "172.21.57.104",
                                    "172.21.57.104:8080"
                                ],
                                "routes": [
                                    {
                                        "name": "default",
                                        "match": {
                                            "prefix": "/"
                                        },
                                        "route": {
                                            "cluster": "outbound|8080||foo.default.svc.cluster.local",
                                            "timeout": "0s",
                                            "retryPolicy": {
                                                "retryOn": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
                                                "numRetries": 2,
                                                "retryHostPredicate": [
                                                    {
                                                        "name": "envoy.retry_host_predicates.previous_hosts"
                                                    }
                                                ],
                                                "hostSelectionRetryMaxAttempts": "5",
                                                "retriableStatusCodes": [
                                                    503
                                                ]
                                            },
                                            "maxGrpcTimeout": "0s"
                                        },
                                        "decorator": {
                                            "operation": "foo.default.svc.cluster.local:8080/*"
                                        }
                                    }
                                ]
                            },
                            {
                                "name": "istio-pilot.istio-system.svc.cluster.local:8080",
                                "domains": [
                                    "istio-pilot.istio-system.svc.cluster.local",
                                    "istio-pilot.istio-system.svc.cluster.local:8080",
                                    "istio-pilot.istio-system",
                                    "istio-pilot.istio-system:8080",
                                    "istio-pilot.istio-system.svc.cluster",
                                    "istio-pilot.istio-system.svc.cluster:8080",
                                    "istio-pilot.istio-system.svc",
                                    "istio-pilot.istio-system.svc:8080",
                                    "172.21.34.2",
                                    "172.21.34.2:8080"
                                ],
                                "routes": [
                                    {
                                        "name": "default",
                                        "match": {
                                            "prefix": "/"
                                        },
                                        "route": {
                                            "cluster": "outbound|8080||istio-pilot.istio-system.svc.cluster.local",
                                            "timeout": "0s",
                                            "retryPolicy": {
                                                "retryOn": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
                                                "numRetries": 2,
                                                "retryHostPredicate": [
                                                    {
                                                        "name": "envoy.retry_host_predicates.previous_hosts"
                                                    }
                                                ],
                                                "hostSelectionRetryMaxAttempts": "5",
                                                "retriableStatusCodes": [
                                                    503
                                                ]
                                            },
                                            "maxGrpcTimeout": "0s"
                                        },
                                        "decorator": {
                                            "operation": "istio-pilot.istio-system.svc.cluster.local:8080/*"
                                        }
                                    }
                                ]
                            },
                            {
                                "name": "allow_any",
                                "domains": [
                                    "*"
                                ],
                                "routes": [
                                    {
                                        "match": {
                                            "prefix": "/"
                                        },
                                        "route": {
                                            "cluster": "PassthroughCluster",
                                            "timeout": "0s"
                                        }
                                    }
                                ]
                            }
                        ],
                        "validateClusters": false
                    }
                }
            ]
        }
    ]
}
